Bug 518128 - Plasmashell crashes in SystemTray::activate
Summary: Plasmashell crashes in SystemTray::activate
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.6.3
Platform: Neon Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-03-25 11:29 UTC by Martin Tlustos
Modified: 2026-03-26 11:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (116.11 KB, text/plain)
2026-03-25 11:29 UTC, Martin Tlustos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tlustos 2026-03-25 11:29:24 UTC
Application: plasmashell (6.6.3)

ApplicationNotResponding [ANR]: false
Qt Version: 6.10.2
Frameworks Version: 6.24.0
Operating System: Linux 6.17.0-19-generic x86_64
Windowing System: Wayland
Distribution: KDE neon User Edition
DrKonqi: 6.6.3 [CoredumpBackend]

-- Information about the crash:
Since the last update plasmashell crashes multiple times (about 10 crash icons in the notification area) after login. I have already reported a bug, but this time I got a backtrace, so I report it again.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
#9  0x00007d897744527e in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#10 0x00007d89774288ff in __GI_abort () at ./stdlib/abort.c:79
#11 0x00007d8978161a31 in qAbort () at /workspace/build/src/corelib/global/qassert.cpp:46
#12 qt_maybe_message_fatal<QString&> (message=..., context=..., msgType=QtFatalMsg) at /workspace/build/src/corelib/global/qlogging.cpp:2166
[...]
#14 0x00007d8978163310 in QMessageLogger::fatal (this=<optimized out>, msg=0x7d8977e75c00 "ASSERT: \"%s\" in file %s, line %d") at /workspace/build/src/corelib/global/qlogging.cpp:901
#15 0x00007d897814dc11 in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at /workspace/build/src/corelib/global/qassert.cpp:113
#16 0x00007d8926a4249f in QtPrivate::CompactContinuation<SystemTray::activate(const QString&, QPoint, QQuickItem*)::<lambda(const QString&)>, void, QString>::create<SystemTray::activate(const QString&, QPoint, QQuickItem*)::<lambda(const QString&)> >(struct {...} &&, QFuture<QString> *, QFutureInterface<void> &, QObject *) (func=..., f=0x7ffec0701900, fi=..., context=0x0) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qfuture_impl.h:598
#17 0x00007d8926a41e9f in QFuture<QString>::then<SystemTray::activate(const QString&, QPoint, QQuickItem*)::<lambda(const QString&)> >(QObject *, struct {...} &&) (this=0x7ffec0701900, context=0x0, function=...) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qfuture.h:366
#18 0x00007d8926a40d9e in SystemTray::activate (this=0x603aae6f98a0, service=..., pos=..., statusNotifierIcon=0x603ab2f463d0) at /workspace/build/applets/systemtray/systemtray.cpp:571
#19 0x00007d8926a4174b in SystemTray::qt_static_metacall (_o=0x603aae6f98a0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7ffec0701c38) at /workspace/build/obj-x86_64-linux-gnu/applets/systemtray/org.kde.plasma.systemtray_autogen/include/moc_systemtray.cpp:161
#20 0x00007d8926a4198a in SystemTray::qt_metacall (this=0x603aae6f98a0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7ffec0701c38) at /workspace/build/obj-x86_64-linux-gnu/applets/systemtray/org.kde.plasma.systemtray_autogen/include/moc_systemtray.cpp:206
#21 0x00007d8979676a09 in QQmlObjectOrGadget::metacall(QMetaObject::Call, int, void**) const () from /lib/x86_64-linux-gnu/libQt6Qml.so.6
#22 0x00007d897984a84d in QV4::CallMethod(QQmlObjectOrGadget const&, int, QMetaType, int, QMetaType const*, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) () from /lib/x86_64-linux-gnu/libQt6Qml.so.6
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
#9  0x00007d897744527e in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#10 0x00007d89774288ff in __GI_abort () at ./stdlib/abort.c:79
#11 0x00007d8978161a31 in qAbort () at /workspace/build/src/corelib/global/qassert.cpp:46
#12 qt_maybe_message_fatal<QString&> (message=..., context=..., msgType=QtFatalMsg) at /workspace/build/src/corelib/global/qlogging.cpp:2166
[...]
#14 0x00007d8978163310 in QMessageLogger::fatal (this=<optimized out>, msg=0x7d8977e75c00 "ASSERT: \"%s\" in file %s, line %d") at /workspace/build/src/corelib/global/qlogging.cpp:901
#15 0x00007d897814dc11 in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at /workspace/build/src/corelib/global/qassert.cpp:113
#16 0x00007d8926a4249f in QtPrivate::CompactContinuation<SystemTray::activate(const QString&, QPoint, QQuickItem*)::<lambda(const QString&)>, void, QString>::create<SystemTray::activate(const QString&, QPoint, QQuickItem*)::<lambda(const QString&)> >(struct {...} &&, QFuture<QString> *, QFutureInterface<void> &, QObject *) (func=..., f=0x7ffec0701900, fi=..., context=0x0) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qfuture_impl.h:598
#17 0x00007d8926a41e9f in QFuture<QString>::then<SystemTray::activate(const QString&, QPoint, QQuickItem*)::<lambda(const QString&)> >(QObject *, struct {...} &&) (this=0x7ffec0701900, context=0x0, function=...) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qfuture.h:366
#18 0x00007d8926a40d9e in SystemTray::activate (this=0x603aae6f98a0, service=..., pos=..., statusNotifierIcon=0x603ab2f463d0) at /workspace/build/applets/systemtray/systemtray.cpp:571
#19 0x00007d8926a4174b in SystemTray::qt_static_metacall (_o=0x603aae6f98a0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7ffec0701c38) at /workspace/build/obj-x86_64-linux-gnu/applets/systemtray/org.kde.plasma.systemtray_autogen/include/moc_systemtray.cpp:161
#20 0x00007d8926a4198a in SystemTray::qt_metacall (this=0x603aae6f98a0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7ffec0701c38) at /workspace/build/obj-x86_64-linux-gnu/applets/systemtray/org.kde.plasma.systemtray_autogen/include/moc_systemtray.cpp:206
#21 0x00007d8979676a09 in QQmlObjectOrGadget::metacall(QMetaObject::Call, int, void**) const () from /lib/x86_64-linux-gnu/libQt6Qml.so.6
#22 0x00007d897984a84d in QV4::CallMethod(QQmlObjectOrGadget const&, int, QMetaType, int, QMetaType const*, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) () from /lib/x86_64-linux-gnu/libQt6Qml.so.6


Reported using DrKonqi
Comment 1 Martin Tlustos 2026-03-25 11:29:26 UTC
Created attachment 191003 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Martin Tlustos 2026-03-25 11:45:42 UTC
Probably related to or duplicate of 517881
Comment 3 TraceyC 2026-03-25 16:09:20 UTC
Thanks for the crash report. The backtrace here is from plasmashell, there's no evidence of the kioworker crash in it.
Let's use this report for the plasmashell crash and 517881 for the kioworker crash
Comment 4 Bug Janitor Service 2026-03-25 17:05:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6437
Comment 5 Nicolas Fella 2026-03-26 10:59:15 UTC
Git commit 1260f8ae0c26c3fb40e70f4feca6811aace7526e by Nicolas Fella.
Committed on 26/03/2026 at 10:05.
Pushed by nicolasfella into branch 'master'.

applets/systemtray: Guard for itemForService returning null

itemForService may return null, e.g. when the DBus service disappeared

SENTRY: PLASMA-WORKSPACE-4P03

M  +21   -0    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/1260f8ae0c26c3fb40e70f4feca6811aace7526e
Comment 6 Nicolas Fella 2026-03-26 11:00:49 UTC
Git commit 9ae86024891e0469f3ab3f8ee1b22618d01c531e by Nicolas Fella.
Committed on 26/03/2026 at 11:00.
Pushed by nicolasfella into branch 'Plasma/6.6'.

applets/systemtray: Guard for itemForService returning null

itemForService may return null, e.g. when the DBus service disappeared

SENTRY: PLASMA-WORKSPACE-4P03
(cherry picked from commit 1260f8ae0c26c3fb40e70f4feca6811aace7526e)

M  +21   -0    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9ae86024891e0469f3ab3f8ee1b22618d01c531e