applets/systemtray: Guard for itemForService returning null

itemForService may return null, e.g. when the DBus service disappeared

SENTRY: PLASMA-WORKSPACE-4P03

BUG: 518128